changes from meeting

--- a/app/views/home/_step01.html.erb
+++ b/app/views/home/_step01.html.erb
@@ -1,5 +1,5 @@
 <div class="title">
-  <h1>Hello, happy to meet you.</h1>
+  <h1>Tell us about yourself!</h1>
 </div>
 <div class="row">
   <div class="column pull-left">
