--- a/app/views/home/_step05.html.erb
+++ b/app/views/home/_step05.html.erb
@@ -1,9 +1,8 @@
 <div class="title">
   <h1>Congrats!</h1>
 </div>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>Thank you for completing your Opprtunity Profile.  We are now searching the network in search of mutual opportunities for you to do business with other local professionals. Each time we discover an opprtunity, we will send you an email alert.  Remember, these are local professionals who have indicated they need what you sell... and who sell what you need! You will receive leads each time new members join... and each time you update your profile with new needs.</p>
+
+<p>No more logging into an abyss of social networks looking for opportunities. Let Opprtunity find them for you!</p>
+
+<p>The new way to network in 2013...</p>
