--- a/app/views/home/_wizard.html.erb
+++ b/app/views/home/_wizard.html.erb
@@ -3,8 +3,8 @@
     <div id="signupWizard" class="wizard">
       <ul class="steps">
         <li data-target="#step1" class="active"><span class="badge badge-info">1</span>Hello<span class="chevron"></span></li>
-        <li data-target="#step2"><span class="badge">2</span>Give<span class="chevron"></span></li>
-        <li data-target="#step3"><span class="badge">3</span>Receive<span class="chevron"></span></li>
+        <li data-target="#step2"><span class="badge">2</span>I Offer<span class="chevron"></span></li>
+        <li data-target="#step3"><span class="badge">3</span>I Need<span class="chevron"></span></li>
         <li data-target="#step4"><span class="badge">4</span>Connect<span class="chevron"></span></li>
         <li data-target="#step5"><span class="badge">5</span>Meet<span class="chevron"></span></li>
       </ul>
