--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer>
   <div class="container">
     <!-- COPYRIGHTS -->
-    <p class="pull-left">Typica - Bootstrap template crafted with passion</p>
+    <p class="pull-left">Copyright OPPRTUNITY</p>
     <p class="pull-right"><a href="#">Back to top</a></p>
   </div>
 </footer>
