--- a/app/views/layouts/_front_page_signed_out.html.erb
+++ b/app/views/layouts/_front_page_signed_out.html.erb
@@ -1,50 +1,28 @@
-  <!-- TESTIMONIALS 3col -->
-  <div class="row testimonials">
-      <div class="span4">
-        <%= image_tag 'img/testimonials_placeholder.png' %>
-        <h2>Lorem ipsum</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-      </div>
-      <div class="span4">
-        <%= image_tag 'img/testimonials_placeholder.png' %>
-        <h2>Quis nostrud</h2>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. </p>
-      </div>
-      <div class="span4">
-        <%= image_tag 'img/testimonials_placeholder.png' %>
-        <h2>Cupidatat non proident</h2>
-        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-  </div>
-
   <div class="section-title">
-    <h2>Typica is fully featured HTML template based on Bootstrap</h2>
+    <h2>How It Works: 4 Easy Steps!</h2>
   </div>
 
   <!-- TESTIMONIALS 4col -->
   <div class="row testimonials">
       <div class="span3">
-        <%= image_tag 'img/testimonials_placeholder.png' %>
-        <h2>Lorem ipsum</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        <%= image_tag 'img/step1.jpg' %>
+        <h2>Login Using LinkedIn</h2>
+        <p>Quickly create your profile using your existing LinkedIn Profile.</p>
       </div>
       <div class="span3">
-        <%= image_tag 'img/testimonials_placeholder.png' %>
-        <h2>Quis nostrud</h2>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. </p>
+        <%= image_tag 'img/step2.jpg' %>
+        <h2>Tell Us What<br/>You Offer</h2>
+        <p>Select 5 Business Categories that best describe what your business does.</p>
       </div>
       <div class="span3">
-        <%= image_tag 'img/testimonials_placeholder.png' %>
-        <h2>Cupidatat non proident</h2>
-        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <%= image_tag 'img/step3.jpg' %>
+        <h2>Tell Us What<br/>You Need</h2>
+        <p>Select 5 Business Categories that best describe what your business needs.</p>
       </div>
       <div class="span3">
-        <%= image_tag 'img/testimonials_placeholder.png' %>
-        <h2>Quis nostrud</h2>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. </p>
+        <%= image_tag 'img/step4.jpg' %>
+        <h2>Get Matched.<br/>Get Leads!</h2>
+        <p>Each hour Opprtunity searches our network and sends you alerts when it finds someone who needs what you offer... and offers what you need.</p>
       </div>
   </div>
 </div><!-- .container -->
@@ -64,45 +42,37 @@
 
     <div class="row">
 
-      <div class="span4 section-title horizontal-left">
+      <div class="span3 section-title horizontal-left">
         <h2>Team members <i class="icon-chevron-right"></i></h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua.
-        <div class="btn btn-large pull-right">Know more &raquo;</div></p>
+        <p>Opprtunity is currently a team of 3 entrepreneurs - each bringing their own unique set of skills.
+        <div class="btn btn-large pull-right"><a href="/about">More info &raquo;</a></div></p>
       </div>
 
-      <div class="span8">
+      <div class="span9">
         <div class="row">
-          <div class="span2 item">
+          <div class="span3 item">
             <div class="circle-thumbnail">
               <%= image_tag 'img/team/1.jpg' %>
             </div>
-            <h2>Kathy Jackson</h2>
-            <p>Incididunt ut labore et dolore magna aliqua.</p>
+            <h2>Janis Krums</h2>
+            <p>A visionary, skilled in the art of networking and making things happen.  Also known for taking the famous picture of the Hudson Plane Crash that went viral on Twitter.</p>
           </div>
-          <div class="span2 item">
+          <div class="span3 item">
             <div class="circle-thumbnail">
               <%= image_tag 'img/team/2.jpg' %>
             </div>
-            <h2>Erin Fields</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor. </p>
+            <h2>Bill Jula</h2>
+            <p>A serial entrepreneur with extensive experience building professional networks.  Enjoys brainstorming business ideas and beating Janis in basketball in his spare time.</p>
           </div>
-          <div class="span2 item">
+          <div class="span3 item">
             <div class="circle-thumbnail">
               <%= image_tag 'img/team/3.jpg' %>
             </div>
-            <h2>Steven Jones</h2>
-            <p>Ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
+            <h2>Jeff Douglas</h2>
+            <p>An award-winning technologist and author with an extensive background in business development, technology management, software development, global outsourcing and innovation management. </p>
           </div>
-          <div class="span2 item">
-            <div class="circle-thumbnail">
-              <%= image_tag 'img/team/4.jpg' %>
-            </div>
-            <h2>Jan Kowalski</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-          </div>
-        </div>
+
+        </div>        
       </div>
     </div>
 
