--- a/app/views/layouts/_slider_block.html.erb
+++ b/app/views/layouts/_slider_block.html.erb
@@ -5,37 +5,19 @@
     <div class="carousel-inner">
       <div class="active item">
         <%= image_tag 'img/slide_bg2.jpg' %>
+
         <div class="caption middle-left container">
-          <p class="small white text-dark">Introducing</p>
-          <p class="medium white text-pink">Bootstrap based template</p>
-          <p class="large pink add-space">TYPICA</p>
-          <p>
+          <p class="small white text-dark">The Search Is Over!</p>
+          <p class="large white text-pink">Let Opprtunity Find You<br/>Real Leads In Real-Time!</p>
+        </div>
+        <div class="caption middle-right container">
+          <p style="margin-top:25px">
             <%= link_to '/auth/linkedin', :class => 'popup', data: { height: 584, width: 440 }  do %>
               <%= image_tag('signup_with_linkedin.png') %>
             <% end %>
-          </p>
-        </div>
+          </p>          
+        </div>        
     </div>
-    <div class="item">
-      <%= image_tag 'img/slide_bg1.jpg' %>
-      <div class="caption bottom-right container">
-        <p class="large pink add-space">Better carousel</p>
-        <p class="small white">Multiple text & background colors</p>
-        <p class="small white">Multiple caption positions</p>
-        <p class="medium white text-pink">and much more!</p>
-      </div>
-    </div>
-    <div class="item">
-      <%= image_tag 'img/slide_bg3.jpg' %>
-      <div class="caption top-right container">
-        <p class="medium pink add-space">Isn't that just</p>
-        <p class="large white text-dark">AWESOME?</p>
-      </div>
-    </div>
-    </div>
-    <!-- Carousel nav -->
-    <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-    <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
   </div>
 
 </div>
