--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,11 +9,6 @@
 </div>
 
 <% if current_user %>
-  <div class="row well well-small" style="margin-top: 18px;">
-    <b class="user_full_name">
-      <%= link_to_if current_user.id == @user.id, "#{@user.first_name} #{@user.last_name}", '#' %>
-    </b>
-  </div>
   <div class="row">
     <div class="span2">
       <%= render '/home/sidebar' %>
@@ -39,18 +34,15 @@
       </div>
       <hr />
 
-      <div class="row">
-        <div class="span10">
-          <h3>About <%= @user.first_name %></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <% if @user.about %>
+        <div class="row">
+          <div class="span10">
+            <h3>About <%= @user.first_name %></h3>
+            <p><%= @user.about %></p>
+          </div>
         </div>
-      </div>
-      <hr />
+        <hr />
+      <% end %>
 
       <% if @user.matches.count > 0 %>
         <div class="row">
