--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,15 +6,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="index.html"><%= image_tag 'logo.png' %></a>
+      <a class="brand" href="/"><%= image_tag 'logo.jpg' %></a>
       <div class="nav-collapse">
         <ul class="nav pull-right">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="blog_fullwidth.html">Blog</a></li>
-          <li><a href="pricing.html">Pricing</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="about">About</a></li>
+          <li><a href="contact">Contact</a></li>
           <li><% if current_user %>
             <%= link_to "Sign out", signout_path %>
           <% else %>
