open skype onclick

--- a/app/views/home/_sidebar.html.erb
+++ b/app/views/home/_sidebar.html.erb
@@ -6,7 +6,8 @@
   <% unless @user.google_plus.blank? %><li><%= link_to '<i class="icon-google-plus-sign"></i>Google+'.html_safe, @user.google_plus %></li><% end %>
   <% unless @user.company_url.blank? %><li><%= link_to '<i class="icon-bookmark"></i>Company'.html_safe, @user.company_url %></li><% end %>
   <% unless @user.phone.blank? %><li><span><i class="icon-phone-sign"></i><%= @user.phone %></span></li><% end %>
-  <% unless @user.skype.blank? %><li><span><i class="icon-cloud"></i><%= @user.skype %></span></li><% end %>
+  <% unless @user.skype.blank? %><li><a href="callto:<%= @user.skype %>"><i class="icon-cloud"></i><%= @user.skype %></a></li><% end %>
+
 </ul>
 <div class="row">
   <div class="span2">
