--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -31,7 +31,7 @@
 
   <!-- For all other devices -->
   <!-- Size should be 32 x 32 pixels -->
-  <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
+  <%= favicon_link_tag 'favicon.jpg', :rel => 'shortcut icon', :type => 'image/jpg' %>
 
   <%= javascript_include_tag "application" %>
 
