--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -17,6 +17,7 @@
             <% end %>
           </a></li>
           <li><a href="/about">About</a></li>
+          <li><a href="/contact">Contact</a></li>
           <li><% if current_user %>
             <%= link_to "Sign out", signout_path %>
           <% else %>
