--- a/app/views/match_mailer/send_match.html.erb
+++ b/app/views/match_mailer/send_match.html.erb
@@ -1,25 +1,30 @@
-Hey <%= @source_user.first_name %>,
+<p>Hey <%= @source_user.first_name %>,</p>
  
-We've found you an incredible opportunity to do business with <%= @target_user.first_name %> <%= @target_user.last_name %>!
+<p>We've found you an incredible opportunity to do business with <%= @target_user.first_name %> <%= @target_user.last_name %>!</p>
 
 <% if @match_type == "reciprocal" %>
-	<%= @target_user.first_name %> offers <%= @matched_needs %>, and is looking for <%= @matched_offerings %>.
+	<p><%= @target_user.first_name %> offers <%= @matched_needs %>, and is looking for <%= @matched_offerings %>.You are looking for <%= @matched_needs %>, and offer <%= @matched_offerings %>.</p>
 
-	You are looking for <%= @matched_needs %>, and offer <%= @matched_offerings %>.
+	<p>Sounds like a great match!</p>
 
-	Sounds like a great match!
 <% elsif @match_type == "needs" %>
-	<%= @target_user.first_name %> offers <%= @matched_needs %>, and may just be the person you are looking for.
+	<p><%= @target_user.first_name %> offers <%= @matched_needs %>, and may just be the person you are looking for.</p>
 <% elsif @match_type == "offerings" %>
-	<%= @target_user.first_name %> is looking for <%= @matched_offerings %> which you said that you offer.
+	<p><%= @target_user.first_name %> is looking for <%= @matched_offerings %> which you said that you offer.</p>
 <% end %>
 
-Here are a few ways you can contact <%= @target_user.first_name %>:
+<p>Here are a few ways you can contact <%= @target_user.first_name %>:</p>
 
+<p>
 <% if @target_user.skype? %>
-Contact <%= @target_user.first_name %> using Skype:   <%= @target_user.skype %>
-<% elsif @target_user.email? %>
-Contact <%= @target_user.first_name %> using Email:   <%= @target_user.email %>
-<% elsif @target_user.phone? %>
+Contact <%= @target_user.first_name %> using Skype:   <%= @target_user.skype %><br/>
+<% end %>
+
+<% if @target_user.email? %>
+Contact <%= @target_user.first_name %> using Email:   <%= @target_user.email %><br/>
+<% end %>
+
+<% if @target_user.phone? %>
 Contact <%= @target_user.first_name %> using Phone:   <%= @target_user.phone %>
 <% end %>
+</p>
