--- a/app/views/match_mailer/send_match.text.erb
+++ b/app/views/match_mailer/send_match.text.erb
@@ -17,9 +17,13 @@ We've found you an incredible opportunity to do business with <%= @target_user.f
 Here are a few ways you can contact <%= @target_user.first_name %>:
 
 <% if @target_user.skype? %>
-Contact <%= @target_user.first_name %> using Skype:   <%= @target_user.skype %>
-<% elsif @target_user.email? %>
-Contact <%= @target_user.first_name %> using Email:   <%= @target_user.email %>
-<% elsif @target_user.phone? %>
+Contact <%= @target_user.first_name %> using Skype:   <%= @target_user.skype %><br/>
+<% end %>
+
+<% if @target_user.email? %>
+Contact <%= @target_user.first_name %> using Email:   <%= @target_user.email %><br/>
+<% end %>
+
+<% if @target_user.phone? %>
 Contact <%= @target_user.first_name %> using Phone:   <%= @target_user.phone %>
 <% end %>
