--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -11,7 +11,7 @@
         <p>425 2nd Street, Third Floor</p>
         <p>San Francisco, CA 94107</p>
         <h4>Contact via email</h4>
-        <p><a href="mailto:bill@opprtunity.com"><i class="icon-envelope"></i> bill@opprtunity.com</a></p>
+        <p><a href="mailto:info@opprtunity.com"><i class="icon-envelope"></i> info@opprtunity.com</a></p>
       </div>
     </div>
   </div>
