--- a/app/views/home/_step04.html.erb
+++ b/app/views/home/_step04.html.erb
@@ -1,49 +1,4 @@
 <div class="title">
-  <h1>Ways I connect.</h1>
+  <h1>My Pitch</h1>
 </div>
-
-<div class="wizard-connect">
-  <div class="input-prepend">
-    <span class="add-on"><i class="icon-envelope icon-2x"></i></span>
-    <%= f.input_field :email,
-      label: false,
-      :style => 'width: 460px',
-      :id => 'inputIcon',
-      type: 'email',
-      placeholder: 'Email Address'
-    %>
-  </div>
-
-  <div class="input-prepend">
-    <span class="add-on"><i class="icon-phone icon-2x"></i></span>
-    <%= f.input_field :phone,
-      label: false,
-      :style => 'width: 460px',
-      :id => 'inputIcon',
-      type: 'tel',
-      placeholder: 'Phone Number'
-    %>
-  </div>
-
-  <div class="input-prepend">
-    <span class="add-on"><i class="icon-cloud icon-2x"></i></span>
-    <%= f.input_field :skype,
-      label: false,
-      :style => 'width: 460px',
-      :id => 'inputIcon',
-      type: 'text',
-      placeholder: 'Skype ID'
-    %>
-  </div>
-
-  <div class="input-prepend">
-    <span class="add-on"><i class="icon-google-plus icon-2x"></i></span>
-    <%= f.input_field :google_plus,
-      label: false,
-      :style => 'width: 460px',
-      :id => 'inputIcon',
-      type: 'url',
-      placeholder: 'Google+'
-    %>
-  </div>
-</div>
+<%= f.input :about, label: false, input_html: {maxlength: 200, style: 'width: 775px;height:150px'} %>
