--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -35,4 +35,8 @@
 
   <%= javascript_include_tag "application" %>
 
+  <script type="text/javascript">var switchTo5x=true;</script>
+  <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+  <script type="text/javascript">stLight.options({publisher: "89543e71-3933-498d-b446-b5c6c7878e5f", doNotHash: false, doNotCopy: false, hashAddressBar: true});</script>  
+
 </head>
