--- a/app/views/home/_sidebar.html.erb
+++ b/app/views/home/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<h3><a href="<%= @user.linked_in %>" target="_blank"><%= image_tag @user.image, :class => 'thumbnail', height: 120, width: 120 %></a></h3>
+<h3><a href="<%= @user.linked_in %>" target="_blank"><%= image_tag @user.image, :class => 'thumbnail', :style => 'margin-left:10px' %></a></h3>
 <ul class="nav nav-list">
   <p><strong><%= @user.first_name %> <%= @user.last_name %></strong></p>
   <p><%= @user.location %> (<%= @user.zip_code %>) </p>
@@ -9,12 +9,3 @@
   <% unless @user.skype.blank? %><li><a href="callto:<%= @user.skype %>"><i class="icon-cloud"></i><%= @user.skype %></a></li><% end %>
 
 </ul>
-<div class="row">
-  <div class="span2">
-    <br/>
-    <a href="#" class='btn btn-primary btn-small' style="
-    text-align: center;
-    display: block;
-    width: 108px;">Request a meeting</a>
-  </div>
-</div>
