--- a/app/views/home/_step03.html.erb
+++ b/app/views/home/_step03.html.erb
@@ -2,4 +2,5 @@
   <h1>I Need.</h1>
 </div>
 <%# Ideally we're getting the industry list from the api %>
-<%= f.input :needs, label: false, collection: Industry.all, value_method: :description, label_method: :description, selected: @user.needs.map(&:name), input_html: { multiple: true, id: 'needs', style: 'width: 75%; margin: auto;' } %>
+<%= f.input :needs, label: false, collection: Industry.all, value_method: :description, label_method: :description, selected: @user.needs.map(&:name), input_html: { multiple: true, id: 'needs', style: 'width: 65%; margin: auto;' } %>
+<div align="center">Please select a minimum of 3.</div>
