--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -18,7 +18,7 @@
 @import 'fuelux.less';
 
 // Glyphicons
-//@import "twitter/bootstrap/sprites.less";
+@import "twitter/bootstrap/sprites.less";
 
 // Your custom LESS stylesheets goes here
 //
@@ -31,3 +31,12 @@
 // Example:
 // @linkColor: #ff0000;
 
+
+// Bootstraps overrides for new grid layout
+
+@gridColumnWidth: 60px;
+@gridGutterWidth: 20px;
+@gridColumnWidth1200: 60px;
+@gridGutterWidth1200: 20px;
+@gridColumnWidth768: 42px;
+@gridGutterWidth768: 20px;
