--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,65 +1,1 @@
-
-<div class="page-header">
-  <h1>Meet our team</h1>
-</div>
-
-<div class="row">
-  <!-- first member -->
-  <div class="member span4">
-    <div class="member-avatar">
-    	<%= image_tag 'img/team/interior_janis.jpg', :class => 'thumbnail' %>
-    </div>
-    <div class="member-meta">
-      <div class="member-name"><h2>Janis Krums <small>Founder</small></h2></div>
-      <div class="member-social">
-        <a href="#"><i class="elegant-icon-facebook"></i></a>
-        <a href="#"><i class="elegant-icon-delicious"></i></a>
-        <a href="#"><i class="elegant-icon-blogger"></i></a>
-        <a href="#"><i class="elegant-icon-linkedin"></i></a>
-        <a href="#"><i class="elegant-icon-flickr"></i></a>
-        <a href="#"><i class="elegant-icon-twitter"></i></a>
-        <a href="#"><i class="elegant-icon-email"></i></a>
-      </div>
-      <div class="member-description">
-        <p>Janis is a co-founder of Opprtunity.com.  As the youngest and best looking member of the team, Janis’ is the public face of the company - actively networking and pursuing opportunities from around the world. When he’s not spending every waking hour working on Opprtunity, Janis is an adviser and angel investor for other companies such as:AITBridges, memSQL, Rawporter, Cube, Ark, and AppStack.   Janis was also recently named as one of the top 10 All-Time influencers of media as a result of this famous Hudson Plane Crash photo - which was one of the first major media events to go viral on Twitter.</p>
-      </div>
-    </div>  
-  </div>
-  <!-- second member -->
-  <div class="member span4">
-    <div class="member-avatar">
-      <%= image_tag 'img/team/interior_bill.jpg', :class => 'thumbnail' %>
-    </div>
-    <div class="member-meta">
-      <div class="member-name"><h2> Bill Jula <small>Founder</small></h2></div>
-      <div class="member-social">
-        <a href="#"><i class="elegant-icon-facebook"></i></a>
-        <a href="#"><i class="elegant-icon-googleplus"></i></a>
-        <a href="#"><i class="elegant-icon-linkedin"></i></a>
-        <a href="#"><i class="elegant-icon-twitter"></i></a>
-        <a href="#"><i class="elegant-icon-email"></i></a>
-      </div>
-      <div class="member-description">
-        <p>Bill is a co-founder of Opprtunity.com.  As the second best looking member of the team, Bill splits his time between business development and product management for the company.  Bill has been involved in the professional networking space for over 10 years having built two successful networks designed to help professionals connect and market their business online (Fast Pitch / PROskore).  The latter (PROskore) has pioneered the idea of measuring professional reputation (i.e. a Klout for business) as a way to help people network more intelligently.  When he’s not brainstorming business ideas, Bill can be found on the sidelines at every type of youth sporting event imaginable with his two young sons.</p>
-      </div>
-    </div>  
-  </div>
-  <!-- third member -->
-  <div class="member span4">
-    <div class="member-avatar">
-      <%= image_tag 'img/team/interior_jeff.jpg', :class => 'thumbnail' %>
-    </div>
-    <div class="member-meta">
-      <div class="member-name"><h2>Jeff D <small>Technologist</small></h2></div>
-      <div class="member-social">
-        <a href="#"><i class="elegant-icon-facebook"></i></a>
-        <a href="#"><i class="elegant-icon-twitter"></i></a>
-        <a href="#"><i class="elegant-icon-wordpress"></i></a>
-        <a href="#"><i class="elegant-icon-email"></i></a>
-      </div>
-      <div class="member-description">
-        <p>Also known as Jeff Douglas, spearheads the technology behind Opprtunity.com. Jeff oversees the development of all aspects of Opprtunity. Jeff’s background spans 15+ years of experience with cloud computing, application architecture, business process re-engineering, Salesforce.com, Heroku, Cloud Foundry, Ruby, Node.js, Apex, Visualforce, Java, Google App Engine, Android, .NET, C#, JavaScript, jQuery, BlazeDS, ColdFusion, SQL Server, NoSQL Databases.</p>
-      </div>
-    </div>  
-  </div>
-</div>
+<%= render "home/about" %>
