--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,33 @@
-<footer>
+<div id="footer">
   <div class="container">
-    <!-- COPYRIGHTS -->
-    <p class="pull-left">OPPRTUNITY © 2013</p>
-    <p class="pull-right"><a href="#">Back to top</a></p>
+    <div class="row">
+      <div class="span12">
+        <div class="start">
+          <div class="text">
+            <span>Start receiving Opprtunity lead alerts to your inbox!</span>
+          </div>
+          <div class="linkedin">
+            <a href="#"><%= image_tag "signup-with-linkedin.png", :alt => "Signup with linkedin" %></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="span6">
+        <div class="social">
+          <div class="follow fb">
+            <iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2FOPPRTUNITY&amp;send=false&amp;layout=button_count&amp;width=80&amp;show_faces=false&amp;font&amp;colorscheme=light&amp;action=like&amp;height=21&amp;appId=292738470857104" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:80px; height:21px;" allowTransparency="true"></iframe>
+          </div>
+          <div class="follow tw">
+            <a href="https://twitter.com/opprtunityco" class="twitter-follow-button" data-show-count="false" data-show-screen-name="false">Follow @opprtunityco</a>
+          </div>
+        </div>
+      </div>
+      <div class="span6">
+        <div class="copy">
+          OPPRTUNITY &copy; 2013
+        </div>
+      </div>
+    </div>
   </div>
-</footer>
+</div>
