--- a/app/views/layouts/_front_page_signed_out.html.erb
+++ b/app/views/layouts/_front_page_signed_out.html.erb
@@ -1,81 +1,3 @@
-  <div class="section-title">
-    <h2>How It Works: 4 Easy Steps!</h2>
-  </div>
-
-  <!-- TESTIMONIALS 4col -->
-  <div class="row testimonials">
-      <div class="span3">
-        <%= image_tag 'img/step1.jpg' %>
-        <h2>Login Using LinkedIn</h2>
-        <p>Quickly create your profile using your existing LinkedIn Profile.</p>
-      </div>
-      <div class="span3">
-        <%= image_tag 'img/step2.jpg' %>
-        <h2>Tell Us What<br/>You Offer</h2>
-        <p>Select 5 Business Categories that best describe what your business does.</p>
-      </div>
-      <div class="span3">
-        <%= image_tag 'img/step3.jpg' %>
-        <h2>Tell Us What<br/>You Need</h2>
-        <p>Select 5 Business Categories that best describe what your business needs.</p>
-      </div>
-      <div class="span3">
-        <%= image_tag 'img/step4.jpg' %>
-        <h2>Get Matched.<br/>Get Leads!</h2>
-        <p>Each hour Opprtunity searches our network and sends you alerts when it finds someone who needs what you offer... and offers what you need.</p>
-      </div>
-  </div>
-</div><!-- .container -->
-
- <div class="hero-unit">
-   <div class="container">
-     <div class="row">
-       <div class="span12">
-         <h1>Who are we?</h1>
-       </div>
-     </div>
-   </div>
- </div>
-
-<div class="container">
-  <div class="team">
-
-    <div class="row">
-
-      <div class="span3 section-title horizontal-left">
-        <h2>Team members <i class="icon-chevron-right"></i></h2>
-        <p>Opprtunity is currently a team of 3 entrepreneurs - each bringing their own unique set of skills.
-        <div class="btn btn-large pull-right"><a href="/about">More info &raquo;</a></div></p>
-      </div>
-
-      <div class="span9">
-        <div class="row">
-          <div class="span3 item">
-            <div class="circle-thumbnail">
-              <%= image_tag 'img/team/1.jpg' %>
-            </div>
-            <h2>Janis Krums</h2>
-            <p>A visionary, skilled in the art of networking and making things happen.  Also known for taking the famous picture of the Hudson Plane Crash that went viral on Twitter.</p>
-          </div>
-          <div class="span3 item">
-            <div class="circle-thumbnail">
-              <%= image_tag 'img/team/2.jpg' %>
-            </div>
-            <h2>Bill Jula</h2>
-            <p>A serial entrepreneur with extensive experience building professional networks.  Enjoys brainstorming business ideas and beating Janis in basketball in his spare time.</p>
-          </div>
-          <div class="span3 item">
-            <div class="circle-thumbnail">
-              <%= image_tag 'img/team/3.jpg' %>
-            </div>
-            <h2>Jeff Douglas</h2>
-            <p>An award-winning technologist and author with an extensive background in business development, technology management, software development, global outsourcing and innovation management. </p>
-          </div>
-
-        </div>        
-      </div>
-    </div>
-
-    
-    
-  </div>
+<%= render "home/how_it_works" %>
+<%= render "home/about" %>
+<%= render "home/contact" %>
