--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,18 +1,1 @@
-
-<div class="page-header">
-  <h1>Contact us</h1>
-</div>
-
-<div class="row">
-  <div class="span8">
-    <div class="row">
-      <div class="span4 contact-info">
-        <h4>Visit us</h4>
-        <p>425 2nd Street, Third Floor</p>
-        <p>San Francisco, CA 94107</p>
-        <h4>Contact via email</h4>
-        <p><a href="mailto:info@opprtunity.com"><i class="icon-envelope"></i> info@opprtunity.com</a></p>
-      </div>
-    </div>
-  </div>
-</div>  
+<%= render "home/contact" %>
