--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,13 +7,9 @@
 
     <%= render 'layouts/navbar' %>
 
-    <div class="container main">
-
+    <div class="wrap">
       <%= yield %>
-
     </div> <!-- /container -->
-
-    <%= render 'layouts/footer' %>
-
+    <%= render 'layouts/footer_profile' %>
   </body>
 </html>
