--- a/app/views/layouts/application_signed_out.html.erb
+++ b/app/views/layouts/application_signed_out.html.erb
@@ -2,17 +2,17 @@
 <html lang="en">
 
   <%= render 'layouts/head' %>
+  <% # include the landing style sheet bootstraps file %>
 
   <body>
 
     <%= render 'layouts/navbar' %>
 
-    <%= render 'layouts/slider_block' %>
 
-    <div class="container">
 
+    <div class="wrap">
+      <%= render 'layouts/slider_block' %>
       <%= render 'layouts/front_page_signed_out' %>
-
     </div> <!-- /container -->
 
     <%= render 'layouts/footer' %>
