--- a/app/assets/stylesheets/new_style.css.erb
+++ b/app/assets/stylesheets/new_style.css.erb
@@ -488,7 +488,9 @@
 	}
 
 	#signup {
-		padding: 0 20px;
+		background-position: 60% 0;
+		height: auto;
+		padding: 0 20px 30px;
 	}
 
 	#signup h2 {
@@ -497,6 +499,7 @@
 
 	#signup .linkedin {
 		width: 200px;
+		margin-top: 30px;
 	}
 
 	.section h2 {
